--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,12 +4,12 @@ Flask-JWT-Extended==4.6.0
 Flask-CORS==4.0.0
 python-dotenv==1.0.0
 bcrypt==4.1.2
-Werkzeug==3.0.1
+Werkzeug>=3.1.0
 requests==2.31.0
 urllib3==2.1.0
 python-dateutil==2.8.2
 Pillow==10.2.0
-numpy<2
+numpy>=2,<2.3.0
 opencv-python==4.12.0.88
 moviepy==2.0.0.dev2
 ffmpeg-python==0.2.0
