--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,10 +9,11 @@ requests==2.31.0
 urllib3==2.1.0
 python-dateutil==2.8.2
 Pillow==10.2.0
-numpy>=2,<2.3.0
-opencv-python==4.12.0.88
+numpy>=1.24.0,<2.0.0
+opencv-python==4.8.1.78
 moviepy==2.0.0.dev2
 ffmpeg-python==0.2.0
 openai==1.59.6
 openai-whisper==20240930
 gunicorn==21.2.0
+psycopg2-binary==2.9.9
