--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,5 +15,6 @@ moviepy==2.0.0.dev2
 ffmpeg-python==0.2.0
 openai==1.59.6
 openai-whisper==20240930
+yt-dlp==2024.11.4
 gunicorn==21.2.0
 psycopg2-binary==2.9.9
